fixed nightmode background not overflowing when contents expand past 100vh

--- a/styles/app/tasker_app.module.scss
+++ b/styles/app/tasker_app.module.scss
@@ -2,7 +2,6 @@
     height: 100vh;
     width: 100vw;
     position: relative;
-    will-change: transform;
     transition: background 0.3s;
 
     .tabs {
@@ -68,6 +67,12 @@
     }
 }
 
+.bkgContainer {
+    position: fixed;
+    min-height: 100%;
+    width: 100%;
+
+}
 
 .darkMode {
     background: #284941;
